--- a/old/css/custom.css
+++ b/old/css/custom.css
@@ -1,45 +1,1 @@
-pre {
-    padding: 0;
-    font-family: monospace;
-    background-color: #f1f1ff;
-}
-
-body {
-    background-color: #eeeeee;
-    font-family: Helvetica;
-    text-align: justify;
-    padding-top: 50px;
-}
-
-hr {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    border-color: #85858d;
-}
-
-.container {
-    background-color: white;
-    border-radius: 15px;
-}
-
-.jumbotron > .container {
-    background-color: transparent;
-}
-
-[data-text] {
-    color: white;
-}
-
-[data-text]::after {
-    content: attr(data-text);
-}
-
-.code-label {
-    border-radius: 50%;
-    font-size: 110%;
-}
-
-.code-label-sm {
-    border-radius: 50%;
-    font-size: 90%;
-}
+body { padding-top: 50px; }
